--- a/boblives.css
+++ b/boblives.css
@@ -728,6 +728,7 @@ color:red;}
     border-radius: 50%;
     display: inline-block;
     text-align:center;
+    margin-top:-20px;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
